Fixed wrong path in tsconfig.json.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "outDir": "js"
   },
   "exclude": ["node_modules"],
-  "filesGlob": ["source/typescript/**/*.ts"]
+  "filesGlob": ["source/**/*.ts"]
 }
